prevent overflow and hide scrollbar on open bubble

--- a/src/components/Content/Sidebar/Post/index.scss
+++ b/src/components/Content/Sidebar/Post/index.scss
@@ -1,6 +1,7 @@
 .TbdPost {
   padding: 15px;
   cursor: pointer;
+  word-break: break-word;
 }
 
 .TbdPost:hover {
